@@ -3,15 +3,15 @@ package system;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 
 public class Plantio {
     private static final AtomicInteger contador = new AtomicInteger(0);
-    private int idPlantio;
+    private final int idPlantio;
     private ArrayList <String> substancias = new ArrayList<>();
     private String nomeEspecie;
-    private String inicio, fim;
+    private String inicio, fim = "Indefinido";
 
     public Plantio (String nomeEspecie) {
         this.idPlantio = contador.incrementAndGet();
@@ -21,10 +21,6 @@ public class Plantio {
 
     public void setNomeEspecie(String nomeEspecie) {
         this.nomeEspecie = nomeEspecie;
-    }
-
-    public void setInicio() {
-        this.inicio = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy/MM/dd"));
     }
 
     public void setFim() {
@@ -40,7 +36,7 @@ public class Plantio {
     }
 
     public ArrayList<String> getSubstancias() {
-        return (ArrayList<String>) Collections.unmodifiableList(new ArrayList<>(this.substancias));
+        return (ArrayList<String>) List.copyOf(this.substancias);
     }
 
     public String getNomeEspecie() {
